@@ -156,7 +156,7 @@ do_start_ovsdb () {
         [ "$OVS_USER" != "" ] && set "$@" --user "$OVS_USER"
         [ "$OVSDB_SERVER_OPTIONS" != "" ] && set "$@" $OVSDB_SERVER_OPTIONS
 
-        start_daemon "$OVSDB_SERVER_PRIORITY" "$OVSDB_SERVER_WRAPPER" "$@" \
+        start_daemon "$OVSDB_SERVER_PRIORITY" "$OVSDB_SERVER_WRAPPER" "$OVS_UMASK" "$@" \
             || return 1
 
         # Initialize database settings.
@@ -226,7 +226,7 @@ do_start_forwarding () {
         [ "$OVS_USER" != "" ] && set "$@" --user "$OVS_USER"
         [ "$OVS_VSWITCHD_OPTIONS" != "" ] &&set "$@" $OVS_VSWITCHD_OPTIONS
 
-        start_daemon "$OVS_VSWITCHD_PRIORITY" "$OVS_VSWITCHD_WRAPPER" "$@" ||
+        start_daemon "$OVS_VSWITCHD_PRIORITY" "$OVS_VSWITCHD_WRAPPER" "$OVS_UMASK" "$@" ||
             return 1
     fi
 }
@@ -340,6 +340,7 @@ set_defaults () {
     SELF_CONFINEMENT=yes
     MONITOR=yes
     OVS_USER=
+    OVS_UMASK=
     OVSDB_SERVER=yes
     OVS_VSWITCHD=yes
     OVSDB_SERVER_PRIORITY=-10
@@ -421,6 +422,8 @@ Other important options for "start", "restart" and "force-reload-kmod":
                      add given key-value pair to Open_vSwitch external-ids
   --delete-bridges   delete all bridges just before starting ovs-vswitchd
   --ovs-user="user[:group]"  pass the --user flag to ovs daemons
+  --ovs-umask=MODE  Set umask prior to run OVS daemons.
+                    This is needed to manage socket group permissions.
 
 Less important options for "start", "restart" and "force-reload-kmod":
   --daemon-cwd=DIR               set working dir for OVS daemons (default: $DAEMON_CWD)
@@ -549,6 +552,7 @@ do
             ;;
     esac
 done
+
 case $command in
     start)
         start_ovsdb || exit 1
