@@ -167,6 +167,7 @@ install_dir () {
 start_daemon () {
     priority=$1
     wrapper=$2
+    umask=$3
     shift; shift
     daemon=$1
     strace=""
@@ -223,7 +224,18 @@ start_daemon () {
         set nice -n "$priority" "$@"
     fi
 
+    # set requested umask if any and turn previous value back
+    if [ -n "$umask" ]; then
+        previuos_umask_value=$(umask)
+        umask "$umask"
+    fi
+
     action "Starting $daemon" "$@" || return 1
+
+    # if umask was set, turn umask value to previous value
+    if [ -n "$umask" ]; then
+        umask "$previuos_umask_value"
+    fi
 
     if test X"$strace" != X; then
         # Strace doesn't have the -D option so we attach after the fact.
